--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,15 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
+/*This is for the browser cards*/
+.image-card {
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.image-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.image-card img {
+    object-fit: cover;
+}
